--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -2,5 +2,4 @@ cmake_minimum_required(VERSION 3.4.1)
 project(Test)
 set(CMAKE_CXX_STANDARD 11)
 
-aux_source_directory(. SRCS)
-add_executable(main ${SRCS})
+add_executable(main test01_vector.cpp)
