--- a/刷题/jzoffer/CMakeLists.txt
+++ b/刷题/jzoffer/CMakeLists.txt
@@ -2,4 +2,4 @@ cmake_minimum_required(VERSION 3.4.1)
 project(JZOffer)
 set(CMAKE_CXX_STANDARD 11)
 
-add_executable(main JZ28_对称的二叉树.cpp)
+add_executable(main JZ57_和为S的两个数字.cpp)
