--- a/刷题/牛客/CMakeLists.txt
+++ b/刷题/牛客/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.4.1)
 project(刷题)
 set(CMAKE_CXX_STANDARD 11)
-
-add_executable(test BM88_判断是否是回文字符串.cpp)
+add_compile_options(-g)
+add_executable(test BM59_N皇后问题.cpp)
