--- a/test/case01_boost/CMakeLists.txt
+++ b/test/case01_boost/CMakeLists.txt
@@ -2,5 +2,5 @@ cmake_minimum_required(VERSION 3.4.1)
 project(BoostTest)
 set(CMAKE_CXX_STANDARD 11)
 
-include_directories(../../../boost_1_77_0)
-add_executable(main test04_any.cpp)
+include_directories("/Users/lixiaoqing/Desktop/Projects/boost/boost_1_79_0/")
+add_executable(main test03_asio.cpp)
