[test] test LockFreeQueue

--- a/test/case14_无锁队列/CMakeLists.txt
+++ b/test/case14_无锁队列/CMakeLists.txt
@@ -1,6 +1,8 @@
 cmake_minimum_required(VERSION 3.4.1)
 project(LockFreeQueue)
 set(CMAKE_CXX_STANDARD 11)
+#set(CMAKE_C_COMPILER "/usr/bin/gcc")
+#set(CMAKE_CXX_COMPILER "/usr/bin/g++")
 add_compile_options(-g)
 aux_source_directory(. SRCS)
 add_executable(my_test_app ${SRCS})
