[algo] adjust file structure

--- a/algorithms/leetcode/CMakeLists.txt
+++ b/algorithms/leetcode/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.4.1)
-project(刷题)
+project(algorithms)
 set(CMAKE_CXX_STANDARD 11)
 add_compile_options(-g)
-add_executable(test LC1115_交替打印FooBar.cpp)
+add_executable(algo LC507_完美数.cpp)
